--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
 
             <div class="profile__buttons">
                 <!-- Insert your CV -->
-                <a href="https://web1s.co/api-mode/aQs42VESKG" class="button">
+                <a href="https://web1s.co/aQs42VESKG" class="button">
                     ㅤLiên Quân - TikTok ㅤ
                 </a>
            ㅤㅤ
                     
                 </a> </div>
             <div class="profile__buttons">
-                <a href="https://web1s.co/api-mode/idap" class="button">
+                <a href="https://web1s.co/idap" class="button">
                    ㅤID APPLE tải shadowrocket freeㅤ
 
                         
