--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
                 <h2 class="profile__name">𝑳𝑯 𝑽𝑷𝑵 <img src="https://i.imgur.com/43DfTBf.png" alt="Đã Xác Minh" style="height: 15px;" /></b>
                 </h2>
-                <h3 class="profile__profession">VƯỢT LINK GIÚP MÌNH ĐỂ LẤY FILE <br> 📩 Reset update mỗi 19:00 - 20:00 mỗi ngày 📩<br> Lần update mới nhất: 20:20 PM 14/04/2023</h3>
+                <h3 class="profile__profession">VƯỢT LINK GIÚP MÌNH ĐỂ LẤY FILE <br> 📩 Reset update mỗi 19:00 - 20:00 mỗi ngày 📩<br> Lần update mới nhất: 19:48 PM 16/04/2023</h3>
 
                 
             </div>
@@ -61,7 +61,7 @@
 
             <div class="profile__buttons">
                 <!-- Insert your CV -->
-                <a href="https://web1s.co/u6XFipbPKS" class="button">
+                <a href="https://web1s.co/MMDodNrNQh" class="button">
                     ㅤLiên Quân - TikTok ㅤ
                 </a>
            ㅤㅤ
