--- a/index.html
+++ b/index.html
@@ -61,8 +61,14 @@
 
             <div class="profile__buttons">
                 <!-- Insert your CV -->
-                <a href="https://web1s.co/wLDutKH9sO" class="button">
-                    ㅤLiên Quân - TikTok ㅤ
+                <a href="https://web1s.co/rTf9PO55v6" class="button">
+                    ㅤServer VietNam
+                </a>
+           ㅤㅤ
+                    
+                </a> </div>
+    <a href="https://web1s.co/qqq1NNUkhT" class="button">
+                    ㅤServer Ngoại ㅤ
                 </a>
            ㅤㅤ
                     
